--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -64,6 +64,19 @@
       "inheritEnvironments": [ "msvc_x86" ],
       "variables": [],
       "cmakeExecutable": "C:/Program Files/CMake/bin/cmake.exe"
+    },
+    {
+      "name": "minified-heavycompress",
+      "generator": "Ninja",
+      "configurationType": "MinSizeRel",
+      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
+      "cmakeExecutable": "C:/Program Files/CMake/bin/cmake.exe",
+      "cmakeCommandArgs": "-DMINIFY_SHADERS=ON -DCOMPRESS_LEVEL=HEAVY trace-source=CMakeLists.txt",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "inheritEnvironments": [ "msvc_x86" ],
+      "variables": []
     }
   ]
 }
