--- a/data/song.yml
+++ b/data/song.yml
@@ -140,10 +140,10 @@ patch:
       units:
         - type: envelope
           id: 154
-          parameters: {attack: 32, decay: 44, gain: 0, release: 0, stereo: 0, sustain: 0}
+          parameters: {attack: 32, decay: 42, gain: 64, release: 0, stereo: 0, sustain: 0}
         - type: oscillator
           id: 155
-          parameters: {color: 17, detune: 64, gain: 64, phase: 0, shape: 64, stereo: 0, transpose: 88, type: 0}
+          parameters: {color: 17, detune: 64, gain: 64, looplength: 9096, loopstart: 24, phase: 0, samplestart: 287100, shape: 64, stereo: 0, transpose: 84, type: 4}
         - type: mulp
           id: 156
           parameters: {stereo: 0}
@@ -158,7 +158,7 @@ patch:
           parameters: {amount: 32, port: 4, sendpop: 0, stereo: 0, target: 18, unit: 0, voice: 0}
         - type: distort
           id: 163
-          parameters: {drive: 116, stereo: 0}
+          parameters: {drive: 96, stereo: 0}
         - type: oscillator
           id: 3
           parameters: {color: 128, detune: 64, gain: 64, looplength: 1, phase: 64, shape: 68, stereo: 0, transpose: 64, type: 0}
@@ -185,7 +185,7 @@ patch:
           parameters: {drive: 6, stereo: 0}
         - type: send
           id: 40
-          parameters: {amount: 102, port: 0, sendpop: 1, stereo: 0, target: 3}
+          parameters: {amount: 106, port: 0, sendpop: 1, stereo: 0, target: 3}
     - name: Snare
       numvoices: 1
       units:
@@ -482,6 +482,15 @@ patch:
         - type: outaux
           id: 188
           parameters: {auxgain: 16, outgain: 16, stereo: 1}
+        - type: envelope
+          id: 1111
+          parameters: {attack: 48, decay: 80, gain: 128, release: 80, stereo: 0, sustain: 0}
+        - type: sync
+          id: 1110
+          parameters: {}
+        - type: pop
+          id: 1112
+          parameters: {stereo: 0}
     - name: Dip
       numvoices: 1
       units:
