--- a/data/song.yml
+++ b/data/song.yml
@@ -110,10 +110,10 @@ patch:
       units:
         - type: envelope
           id: 18
-          parameters: {attack: 32, decay: 65, gain: 128, release: 64, stereo: 0, sustain: 0}
+          parameters: {attack: 48, decay: 64, gain: 128, release: 64, stereo: 0, sustain: 0}
         - type: oscillator
           id: 19
-          parameters: {color: 0, detune: 64, gain: 128, looplength: 403, loopstart: 16476, phase: 64, samplestart: 1486498, shape: 64, stereo: 0, transpose: 69, type: 4, unison: 0}
+          parameters: {color: 0, detune: 64, gain: 128, looplength: 1486, loopstart: 2536, phase: 0, samplestart: 250849, shape: 64, stereo: 0, transpose: 42, type: 1, unison: 0}
         - type: mulp
           id: 20
           parameters: {stereo: 0}
@@ -134,34 +134,37 @@ patch:
           parameters: {attack: 0, decay: 64, gain: 128, release: 0, stereo: 0, sustain: 0}
         - type: distort
           id: 25
-          parameters: {drive: 6, stereo: 0}
+          parameters: {drive: 32, stereo: 0}
         - type: send
           id: 26
-          parameters: {amount: 112, port: 0, sendpop: 1, stereo: 0, target: 2}
+          parameters: {amount: 77, port: 0, sendpop: 1, stereo: 0, target: 2}
     - name: Kick
       numvoices: 1
       units:
         - type: envelope
           id: 154
-          parameters: {attack: 32, decay: 42, gain: 64, release: 0, stereo: 0, sustain: 0}
+          parameters: {attack: 16, decay: 32, gain: 32, release: 0, stereo: 0, sustain: 0}
         - type: oscillator
           id: 155
-          parameters: {color: 17, detune: 64, gain: 64, looplength: 9096, loopstart: 24, phase: 0, samplestart: 287100, shape: 64, stereo: 0, transpose: 62, type: 4}
+          parameters: {color: 17, detune: 64, gain: 64, looplength: 2614, loopstart: 2301, phase: 0, samplestart: 171746, shape: 64, stereo: 0, transpose: 82, type: 4}
         - type: mulp
           id: 156
           parameters: {stereo: 0}
         - type: envelope
           id: 27
-          parameters: {attack: 48, decay: 71, gain: 128, release: 0, stereo: 0, sustain: 0}
+          parameters: {attack: 16, decay: 71, gain: 128, release: 0, stereo: 0, sustain: 0}
         - type: sync
           id: 197
           parameters: {}
         - type: distort
           id: 163
           parameters: {drive: 96, stereo: 0}
+        - type: send
+          id: 1140
+          parameters: {amount: 32, port: 4, sendpop: 0, stereo: 0, target: 18, unit: 0, voice: 0}
         - type: oscillator
           id: 3
-          parameters: {color: 128, detune: 64, gain: 96, looplength: 1, phase: 64, shape: 68, stereo: 0, transpose: 42, type: 0}
+          parameters: {color: 128, detune: 64, gain: 128, looplength: 1, phase: 64, shape: 68, stereo: 0, transpose: 42, type: 0}
         - type: mulp
           id: 31
           parameters: {stereo: 0}
@@ -176,7 +179,7 @@ patch:
           parameters: {panning: 64, stereo: 0}
         - type: aux
           id: 37
-          parameters: {channel: 4, gain: 128, stereo: 1}
+          parameters: {channel: 4, gain: 64, stereo: 1}
         - type: envelope
           id: 38
           parameters: {attack: 0, decay: 71, gain: 128, release: 0, stereo: 0, sustain: 0}
@@ -185,7 +188,13 @@ patch:
           parameters: {drive: 6, stereo: 0}
         - type: send
           id: 40
-          parameters: {amount: 106, port: 0, sendpop: 1, stereo: 0, target: 3}
+          parameters: {amount: 100, port: 0, sendpop: 1, stereo: 0, target: 3}
+        - type: envelope
+          id: 1138
+          parameters: {attack: 48, decay: 54, gain: 128, release: 0, stereo: 0, sustain: 0}
+        - type: send
+          id: 1139
+          parameters: {amount: 32, port: 5, sendpop: 1, stereo: 0, target: 3, unit: 0, voice: 0}
     - name: Snare
       numvoices: 1
       units:
@@ -432,12 +441,6 @@ patch:
         - type: send
           id: 145
           parameters: {amount: 128, port: 1, sendpop: 1, stereo: 0, target: 134, unit: 0, voice: 0}
-        - type: envelope
-          id: 1134
-          parameters: {attack: 0, decay: 100, gain: 128, release: 100, stereo: 0, sustain: 0}
-        - type: send
-          id: 1135
-          parameters: {amount: 32, port: 4, sendpop: 1, stereo: 0, target: 177, unit: 0, voice: 0}
     - name: Morea
       numvoices: 1
       units:
